<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>person_msgs</name>
  <version>0.0.0</version>
  <description>a package for practice</description>
  <maintainer email="kanata.murasawa@gmail.com">kanat</maintainer>
  <license>BSD-3-Clause</license>
  <depend>rclpy</exec_depend>            
  <exec_depend>std_msgs</exec_depend>    

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
